--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@
   <script>
     // 组件数据 - 可以根据需要自定义文字和链接
     const componentsData = [
-      { text: "第一页", link: "https://waterchisato.github.io/zdy.web.github.io/" },
-      { text: "github跳转群聊", link: "https://waterchisato.github.io/LianbangZongHeJoinQQGrop.github.io/" },
-      { text: "github", link: "https://github.com/WaterChisato" },
-      { text: "ReadMe", link: "https://waterchisato.github.io/WaterChisato-readme/#" },
-      { text: "原神国服包体下载（apk）", link: "https://ys-api.mihoyo.com/event/download_porter/link/ys_cn/official/android_backup317" },
-      { text: "“蔚蓝档案”游戏以及部分二创游戏下载", link: "https://waterchisato.github.io/bluearchive_xiazai" },
-      { text: "水喝千束视频协议", link: "https://waterchisato.github.io/VideoRule/" },
-      { text: "神秘网页", link: "https://waterchisato.github.io/OpenBox" },
-      { text: "待定", link: "https://example.com/9" },
-      { text: "第三页", link: "https://waterchisato.github.io/zdy.web.3" }
+      { text: "第二页", link: "https://waterchisato.github.io/zdy.web.2/" },
+      { text: "待定", link: "https://waterchisato.github.io/zdy.web.daiding" },
+      { text: "待定", link: "https://waterchisato.github.io/zdy.web.daiding" },
+      { text: "待定", link: "https://waterchisato.github.io/zdy.web.daiding" },
+      { text: "待定", link: "https://waterchisato.github.io/zdy.web.daiding" },
+      { text: "待定", link: "https://waterchisato.github.io/zdy.web.daiding" },
+      { text: "待定", link: "https://waterchisato.github.io/zdy.web.daiding" },
+      { text: "待定", link: "https://waterchisato.github.io/zdy.web.daiding" },
+      { text: "待定", link: "https://waterchisato.github.io/zdy.web.daiding" },
+      { text: "第四页", link: "https://waterchisato.github.io/zdy.web.4" }
     ];
     
     // 生成组件
