--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     // 组件数据 - 可以根据需要自定义文字和链接
     const componentsData = [
       { text: "第二页", link: "https://waterchisato.github.io/zdy.web.2/" },
-      { text: "待定", link: "https://waterchisato.github.io/zdy.web.daiding" },
+      { text: "gay名字查询", link: "https://waterchisato.github.io/gayname" },
       { text: "待定", link: "https://waterchisato.github.io/zdy.web.daiding" },
       { text: "待定", link: "https://waterchisato.github.io/zdy.web.daiding" },
       { text: "待定", link: "https://waterchisato.github.io/zdy.web.daiding" },
