--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     const componentsData = [
       { text: "第二页", link: "https://waterchisato.github.io/zdy.web.2/" },
       { text: "gay名字查询", link: "https://waterchisato.github.io/gayname" },
-      { text: "待定", link: "https://waterchisato.github.io/zdy.web.daiding" },
+      { text: "我们需要更多小雪", link: "https://waterchisato.github.io/WeHaveManyNiHaHaHa/" },
       { text: "待定", link: "https://waterchisato.github.io/zdy.web.daiding" },
       { text: "待定", link: "https://waterchisato.github.io/zdy.web.daiding" },
       { text: "待定", link: "https://waterchisato.github.io/zdy.web.daiding" },
