--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       { text: "第二页", link: "https://waterchisato.github.io/zdy.web.2/" },
       { text: "gay名字查询", link: "https://waterchisato.github.io/gayname" },
       { text: "我们需要更多小雪", link: "https://waterchisato.github.io/WeHaveManyNiHaHaHa/" },
-      { text: "待定", link: "https://waterchisato.github.io/zdy.web.daiding" },
+      { text: "水喝千束的迷你游戏库", link: "https://waterchisato.github.io/game" },
       { text: "待定", link: "https://waterchisato.github.io/zdy.web.daiding" },
       { text: "待定", link: "https://waterchisato.github.io/zdy.web.daiding" },
       { text: "待定", link: "https://waterchisato.github.io/zdy.web.daiding" },
