--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
   <!-- 页脚 -->
   <footer class="bg-dark text-white py-6 mt-12">
     <div class="container mx-auto px-4 text-center">
-      <p class="text-lg">水喝千束  x  联邦综合</p>
-      <p class="text-sm mt-2 opacity-70">© 2025 自定义链接页面</p>
+      <p class="text-lg">水喝千束</p>
+      <p class="text-sm mt-2 opacity-70">© 2025 水喝千束的博客</p>
     </div>
   </footer>
 
@@ -75,8 +75,8 @@
       { text: "gay名字查询", link: "https://waterchisato.github.io/gayname" },
       { text: "我们需要更多小雪", link: "https://waterchisato.github.io/WeHaveManyNiHaHaHa/" },
       { text: "水喝千束的迷你游戏库", link: "https://waterchisato.github.io/game" },
-      { text: "全球时间", link: "https://waterchisato.github.io/zdy.web.daiding" },
-      { text: "待定", link: "https://waterchisato.github.io/a/time.html" },
+      { text: "直播预告", link: "https://birthday-live.github.io/WaterChisato" },
+      { text: "全球时间", link: "https://waterchisato.github.io/a/time.html" },
       { text: "待定", link: "https://waterchisato.github.io/zdy.web.daiding" },
       { text: "待定", link: "https://waterchisato.github.io/zdy.web.daiding" },
       { text: "待定", link: "https://waterchisato.github.io/zdy.web.daiding" },
