--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       { text: "gay名字查询", link: "https://waterchisato.github.io/gayname" },
       { text: "我们需要更多小雪", link: "https://waterchisato.github.io/WeHaveManyNiHaHaHa/" },
       { text: "水喝千束的迷你游戏库", link: "https://waterchisato.github.io/game" },
-      { text: "直播预告", link: "https://birthday-live.github.io/WaterChisato" },
+      { text: "直播预告", link: "https://waterchisato.github.io/a/birthdaylive" },
       { text: "全球时间", link: "https://waterchisato.github.io/a/time.html" },
       { text: "待定", link: "https://waterchisato.github.io/zdy.web.daiding" },
       { text: "待定", link: "https://waterchisato.github.io/zdy.web.daiding" },
