--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       { text: "水喝千束的迷你游戏库", link: "https://waterchisato.github.io/game" },
       { text: "直播预告", link: "https://waterchisato.github.io/a/birthdaylive" },
       { text: "全球时间", link: "https://waterchisato.github.io/a/time.html" },
-      { text: "动创作 官方网站", link: "https://animereation.pages.dev/#contact" },
+      { text: "动创作 官方网站", link: "https://animereation.github.io/" },
       { text: "待定", link: "https://waterchisato.github.io/zdy.web.daiding" },
       { text: "待定", link: "https://waterchisato.github.io/zdy.web.daiding" },
       { text: "第四页", link: "https://waterchisato.github.io/zdy.web.4" }
